# RL-X

./: pyproject.toml
rl_x/algorithms/crossq2/: README.md
rl_x/algorithms/crossq2/flax/: __init__.py  batch_renorm.py  critic.py  crossq.py  crossq2.py  default_config.py  policy.py
rl_x/algorithms/crosstqc/flax/: __init__.py  critic.py  crosstqc.py  default_config.py  policy.py
rl_x/algorithms/ppo/flax/: ppo.py
