[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_x"
version = "0.0.1"
description = "RL-X: A framework for Reinforcement Learning research"
authors = [{name = "Nico Bohlinger", email = "nico.bohlinger@gmail.com"}]
license = {text = "MIT License"}
readme = "README.md"
dependencies = [
    "absl-py>=1.4.0",
    "ml-collections>=0.1.1",
    "wandb==0.17.0",
    "gymnasium[mujoco,classic-control,atari,accept-rom-license,other]>=0.29.1",
    "mujoco>=3.1.3",
    "mujoco-mjx>=3.1.3",
    "numpy==1.24.3",
    "tensorflow<=2.15.1",
    "tensorboard<=2.15.2",
    "jax[cpu]>=0.4.28",
    "flax==0.8.3",
    "orbax_checkpoint==0.5.3",
    "optax==0.2.2",
    "chex>=0.1.85",
    "tensorflow_probability>=0.23.0"
]

[project.optional-dependencies]
envpool = [
    "envpool==0.8.4"
]
all = [
    "rl_x[envpool]"
]

[project.urls]
repository = "https://github.com/iBims1JFK/RL-X/"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["rl_x"]